--- a/info.yaml
+++ b/info.yaml
@@ -24,30 +24,50 @@ yaml_version: 4
 documentation: 
   author:       "Tiny Tapeout 02 (J. Rosenthal)"      # Your name
   discord:      "jamesr#0350"      # Your discord handle - make sure to include the # part as well
-  title:        "7-Seg 'Tiny Tapeout' Display"      # Project title
+  title:        "Customizable UART string tx"      # Project title
   picture:      ""
   language:     "Wokwi" # other examples include Verilog, Amaranth, VHDL, etc
-  doc_link:     "https://wokwi.com/projects/347497504164545108"      # URL to longer form documentation, eg the README.md in your repository
+  doc_link:     "https://wokwi.com/projects/347144898258928211"      # URL to longer form documentation, eg the README.md in your repository
   clock_hz:     1       # Clock frequency in Hz (if required) we are expecting max clock frequency to be ~6khz. Provided on input 0.
   description:  |
-      This circuit will output a string of characters (’tiny tapeout’) to the 7-segment display.
+    Customizable UART Transmitter
+    Supports sending multiple ASCII characters over UART.
+    Each column of flip flops stores a single ASCII character. To modify a character, change bits 6-0 by modifying whether the respective multiplex is set to VCC or GND. 
+    
+    To add characters, copy and paste a column. Connect the output of the new column (Q port of the upper-most D-flip flop) to the input of the stage to the left (bottom-left most multiplexer port). Remember to connect the multiplexer select signal and the clock to the new column as well.
+    
+    Lastly, delete the the output of the first column (Q port of the upper-most D-flip flop) and create a new connection to the to the input of the new stage you've added (bottom-left most multiplexer port).
+
 
   how_it_works: |
-      The logic to light the characters appears in the bottom half of the simulation window. The top half of the simulation window implements a modulo-11 counter. In other words, the counter increments up to 11 then resets. This counter is used to determine which character we should output to the 7-segment display. The truth table for the design can be found in the Design Spreadsheet: https://docs.google.com/spreadsheets/d/1-h9pBYtuxv6su2EC8qBc6nX_JqHXks6Gx5nmHFQh_30/edit
+     TODO:FIXME
+  
 # Instructions on how someone could test your project, include things like what buttons do what and how to set the clock if needed
   how_to_test:  |
-      Explain how to test your project
+    To begin transmission
+    1. Set the Arduino serial baud rate `Serial.begin(<baud rate>);` in the *.ino file to 300
+    2. Set the Wokwi clock frequency `"attrs": { "frequency": "300" }` in the diagram.json to 300 as well 
+    3. Set the slide switch to the clock
+    4. Set SW7 to OFF ("Load")
+    5. Set SW8 to ON ("Output Enable")
+    6. Set SW7 to ON ("TX")
+    
+    If there's no output from the Wokwi Arduino serial monitor, try toggling SW7 OFF and ON again.
+    
+    Congratulations! You should now see your customized letters being output!
+    
+    Note that garbage characters may be printed upon initialization.
 
 # A description of what the inputs do
   inputs: 
-    - clock
-    - Reset Counter
     - N/A
-    - Clock Disable (Test Mode)
-    - Test Logic A
-    - Test Logic B
-    - Test Logic C
-    - Test Logic D
+    - N/A
+    - N/A
+    - N/A
+    - N/A
+    - N/A
+    - load/tx
+    - output enable
 
 # A description of what the outputs do
   outputs:
